--- a/index.html
+++ b/index.html
@@ -22,59 +22,100 @@
           <img src="./images/logo.svg" alt="SPLITTER" />
         </div>
         <div id="inner-container">
-          <div class="bill">
-            <div class="container">
-              <div class="bill-header">
-                <div class="bill-text">
-                  <h1>Bill</h1>
-                </div>
-                <div class="bill-input">
-                  <div class="dollar-icon">
-                    <img src="./images/icon-dollar.svg" alt="" />
+          <div class="inner-wrapper">
+            <div class="bill">
+              <div class="container">
+                <div class="bill-header">
+                  <div class="bill-text">
+                    <h1>Bill</h1>
                   </div>
-                  <input type="number" class="input_bill" placeholder="0" />
+                  <div class="bill-input">
+                    <div class="dollar-icon">
+                      <img
+                        src="./images/icon-dollar.svg"
+                        alt=""
+                        class="dol-icon"
+                      />
+                    </div>
+                    <input type="number" class="input_bill" placeholder="0" />
+                  </div>
                 </div>
-              </div>
-              <div class="tip">
-                <button type="submit" class="btn-five-percent">5%</button>
-                <button type="submit" class="btn-ten-percent">10%</button>
-                <button type="submit" class="btn-fifteen-percent">15%</button>
-                <button type="submit" class="btn-twenty-five-percent">
-                  25%
-                </button>
-                <button type="submit" class="btn-fifty-percent">50%</button>
-                <button type="submit" class="btn-custom">Custom</button>
-              </div>
-              <div class="people">
-                <div class="people-icon">
-                  <img src="./images/icon-person.svg" alt="" />
+                <div class="tip">
+                  <div class="select-tip">
+                    <h1>Select Tip %</h1>
+                  </div>
+                  <div class="tip-buttons">
+                    <button type="submit" class="btn btn-five-percent">
+                      5%
+                    </button>
+                    <button type="submit" class="btn btn-ten-percent">
+                      10%
+                    </button>
+                    <button type="submit" class="btn btn-fifteen-percent">
+                      15%
+                    </button>
+                    <button type="submit" class="btn btn-twenty-five-percent">
+                      25%
+                    </button>
+                    <button type="submit" class="btn btn-fifty-percent">
+                      50%
+                    </button>
+                    <input
+                      type="number"
+                      class="input_custom"
+                      placeholder="Custom"
+                    />
+                  </div>
                 </div>
-                <input type="number" class="number-of-people" placeholder="0" />
+                <div class="people">
+                  <div class="ppl">
+                    <div class="people-text">
+                      <h1>Number of people</h1>
+                    </div>
+                    <div class="error-text hidden">
+                      <p>Can't be zero</p>
+                    </div>
+                  </div>
+                  <div class="people-input">
+                    <div class="people-icon">
+                      <img
+                        src="./images/icon-person.svg"
+                        alt=""
+                        class="ppl-icon"
+                      />
+                    </div>
+                    <input
+                      type="number"
+                      class="number-of-people"
+                      placeholder="0"
+                    />
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="tip-display">
-            <div class="container">
-              <div class="tip-amount">
-                <div class="tip-text">
-                  <h1>Tip Amount</h1>
-                  <p>/ person</p>
+            <div class="tip-display">
+              <div class="container">
+                <div class="tip-amount">
+                  <div class="tip-text">
+                    <h1>Tip Amount</h1>
+                    <p>/ person</p>
+                  </div>
+                  <div class="price tip-price">
+                    <h1 class="tip_price">$0.00</h1>
+                  </div>
                 </div>
-                <div class="price tip-price">
-                  <h1>$0.00</h1>
+                <div class="total">
+                  <div class="total-text">
+                    <h1>Total</h1>
+                    <p>/ person</p>
+                  </div>
+                  <div class="price total-price">
+                    <h1 class="total_price">$0.00</h1>
+                  </div>
                 </div>
-              </div>
-              <div class="total">
-                <div class="total-text">
-                  <h1>Total</h1>
-                  <p>/ person</p>
+                <div class="reset">
+                  <button type="reset" class="btn-reset">Reset</button>
                 </div>
-                <div class="price total-price">
-                  <h1>$0.00</h1>
-                </div>
-              </div>
-              <div class="reset">
-                <button type="reset" class="btn-reset">Reset</button>
               </div>
             </div>
           </div>
@@ -86,7 +127,9 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by
+      <a href="twitter.com/sotundenuel">Sotunde Emmanuel Adefenwa</a>.
     </div>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
